fixed open gaps

--- a/Experimenten/house/roof.css
+++ b/Experimenten/house/roof.css
@@ -12,7 +12,7 @@ section:nth-of-type(3) div:nth-of-type(2) {
 section:nth-of-type(3) div:nth-of-type(1) {
   background-color: var(--roof-left);
 
-  transform: translateY(-62vh) translateX(10.9vw) rotatey(0deg);
+  transform: translateY(-61.9vh) translateX(10.9vw) rotatey(0deg);
   transform-origin: center;
 }
 
@@ -20,14 +20,14 @@ section:nth-of-type(3) div:nth-of-type(1) {
 section:nth-of-type(3) div:nth-of-type(2) {
   background-color: var(--roof-right);
 
-  transform: translateY(-62vh) translateX(10.9vw) rotatey(90deg);
+  transform: translateY(-61.9vh) translateX(10.9vw) rotatey(90deg);
   transform-origin: right center;
 }
 
 section:nth-of-type(3) div:nth-of-type(3) {
   background-color: var(--roof-top);
 
-  transform: translateY(-62vh) translateX(10.9vw) rotatex(90deg);
+  transform: translateY(-61.8vh) translateX(10.9vw) rotatex(90deg);
   transform-origin: top center;
   width: calc(var(--width) / 1.6);
 }
